--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ Pillow==2.9.0
 argparse==1.2.1
 django-watson==1.1.8
 djangorestframework==3.1.3
+python-memcached==1.54
+six==1.9.0
+sorl-thumbnail==12.3
 wsgiref==0.1.2
