--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ MarkupSafe==0.23
 Pillow==2.9.0
 argparse==1.2.1
 django-watson==1.1.8
+django-widget-tweaks==1.4.1
 djangorestframework==3.1.3
 python-memcached==1.54
 six==1.9.0
