--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ django-floppyforms==1.4.1
 django-watson==1.1.8
 django-widget-tweaks==1.4.1
 djangorestframework==3.1.3
+gunicorn==19.3.0
 python-memcached==1.54
+setproctitle==1.1.9
 six==1.9.0
 sorl-thumbnail==12.3
 wsgiref==0.1.2
