fixes for production config files

--- a/install/mcdermott.conf
+++ b/install/mcdermott.conf
@@ -1,6 +1,8 @@
 # the upstream component nginx needs to connect to
 upstream django {
-    unix:/home/ubuntu/mcdermott/run/gunicorn.sock fail_timeout=0
+    # Use the following to configure with UNIX sockets
+    server unix:/home/ubuntu/mcdermott/run/gunicorn.sock fail_timeout=0;
+    # server 127.0.0.1:8000;
 }
 
 # configuration of the server
@@ -28,10 +30,6 @@ server {
 
     # Finally, send all non-media requests to the Django server.
     location / {
-        # an HTTP header important enough to have its own Wikipedia entry:
-        #   http://en.wikipedia.org/wiki/X-Forwarded-For
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
         # enable this if and only if you use HTTPS, this helps Rack
         # set the proper protocol for doing redirects:
         # proxy_set_header X-Forwarded-Proto https;
@@ -40,9 +38,14 @@ server {
         # can be set properly within the Rack application
         proxy_set_header Host $http_host;
 
+	proxy_set_header X-Real-IP $remote_addr;
+        # an HTTP header important enough to have its own Wikipedia entry:
+        #   http://en.wikipedia.org/wiki/X-Forwarded-For
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
         # we don't want nginx trying to do something clever with
         # redirects, we set the Host: header above already.
         proxy_redirect off;
-        uwsgi_pass  django;
+        proxy_pass  http://django;
     }
 }
