--- a/install/supervisor_mcd.conf
+++ b/install/supervisor_mcd.conf
@@ -4,4 +4,4 @@ directory = /home/ubuntu/mcdermott/
 user = ubuntu                                                          ; User to run as
 stdout_logfile = /home/ubuntu/logs/mcdermott_gunicorn_supervisor.log   ; Where to write log messages
 redirect_stderr = true                                                ; Save stderr in the same log
-environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8,DEBUG=false,ALLOWED_HOSTS="localhost,127.0.0.1"
+environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8,ALLOWED_HOSTS="localhost,127.0.0.1,mcd.joshcai.com"
