--- a/install/mcdermott.conf
+++ b/install/mcdermott.conf
@@ -10,7 +10,7 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name mcd.joshcai.com; # substitute your machine's IP address or FQDN
+    server_name mcdermott.org www.mcdermott.org test.mcdermott.org mcd.joshcai.com; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
