--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 Django==1.8.2
-Jinja2==2.7.3
-MarkupSafe==0.23
-Pillow==2.9.0
-argparse==1.2.1
 django-floppyforms==1.4.1
 django-watson==1.1.8
 django-widget-tweaks==1.4.1
 djangorestframework==3.1.3
 gunicorn==19.3.0
+Jinja2==2.7.3
+MarkupSafe==0.23
+Pillow==2.9.0
+psycopg2==2.6.1
 python-memcached==1.54
 setproctitle==1.1.9
 six==1.9.0
 sorl-thumbnail==12.3
-wsgiref==0.1.2
