add roles and ability to seed staff from csv

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==1.8.2
+django-discover-runner==1.0
 django-floppyforms==1.4.1
+django-role-permissions==0.6.0
 django-watson==1.1.8
 django-widget-tweaks==1.4.1
 djangorestframework==3.1.3
