--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-widget-tweaks==1.4.1
 djangorestframework==3.1.3
 gunicorn==19.3.0
 Jinja2==2.7.3
+jsonfield==1.0.3
 MarkupSafe==0.23
 Pillow==2.9.0
 psycopg2==2.6.1
