--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==0.23
 Pillow==2.9.0
 psycopg2==2.6.1
 python-memcached==1.54
+requests==2.8.0
 setproctitle==1.1.9
 six==1.9.0
 sorl-thumbnail==12.3
