change role name, update server config

--- a/install/mcdermott.conf
+++ b/install/mcdermott.conf
@@ -5,12 +5,17 @@ upstream django {
     # server 127.0.0.1:8000;
 }
 
+server {
+    listen 80;
+    server_name www.mcdermott.org;
+    rewrite ^ http://mcdermott.org/ permanent;
+}
 # configuration of the server
 server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name mcdermott.org www.mcdermott.org test.mcdermott.org mcd.joshcai.com; # substitute your machine's IP address or FQDN
+    server_name mcdermott.org; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
